feat: update wifi upload mp3 file src

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -73,6 +73,7 @@
   "files.associations": {
     "mp3dec.h": "c",
     "string.h": "c",
-    "u8g2.h": "c"
+    "u8g2.h": "c",
+    "typeinfo": "c"
   }
 }
