--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
-# The following lines of boilerplate have to be in your project's
-# CMakeLists in this exact order for cmake to work correctly
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(ssd1306_example)
+
+# Use custom partition table
+set(PARTITION_CSV_PATH ${CMAKE_SOURCE_DIR}/partitions.csv)
+
+project(oled_mp3_player)
